Custom config.yml to me

--- a/_config.yml
+++ b/_config.yml
@@ -14,29 +14,12 @@ permalink: /:title/
 authors:
   leo:
     name: Leo
-    display_name: Leonardo
-    gravatar: e56154546cf4be74e393c62d1ae9f9d4
+    display_name: Leonardo Taroco
+    avatar: 'assets/images/avatar.png'
     email: leonardo_taroco@hotmail.com
     web: https://www.wowthemes.net
     twitter: https://twitter.com/tarocoleo
-    description: ":D"
-  sal:
-    name: Sal
-    display_name: Sal
-    gravatar: e56154546cf4be74e393c62d1ae9f9d4
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net
-    twitter: https://twitter.com/wowthemesnet
-    description: "Author of Mediumish, a Bootstrap Medium styled template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
-  john:
-    name: John
-    display_name: John    
-    avatar: 'assets/images/avatar.png'
-    gravatar: b1cc14991db7a456fcd761680bbc8f81
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net
-    twitter: https://twitter.com/wowthemesnet
-    description: "This is the author box. Write a short description of the author here. You are currently previewing Mediumish demo, a Jekyll template compatible with Github pages."
+    description: "Desenvolvedor Ruby on Rails viciado em café, pai de pet e gosto de brincar em jogos competitivos nas horas vagas."
 
 # Plugins
 plugins:
