fixed web url author

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ authors:
     display_name: Leonardo Taroco
     avatar: 'assets/images/avatar.png'
     email: leonardo_taroco@hotmail.com
-    web: https://www.wowthemes.net
+    web: https://tarocoleo.github.io/
     twitter: https://twitter.com/tarocoleo
     description: "Desenvolvedor Ruby on Rails viciado em café, pai de pet e gosto de brincar em jogos competitivos nas horas vagas."
 
